Docu image change

--- a/content/zh/document/病友經驗分享之四.md
+++ b/content/zh/document/病友經驗分享之四.md
@@ -7,7 +7,7 @@ bg_image: "images/banner/banner.jpg"
 # meta description
 description : "尤塞氏症是一種罕見的遺傳性疾病，患者常常同時出現聽力障礙和視網膜色素病變，而且無法治療，只能及早發現，提前做好準備；根據統計，全球平均每10萬人約有2~4人罹患這種疾病。"
 # course thumbnail
-image: "images/related_news/News-Cover.jpg"
+image: "images/documents/peace9.jpg"
 # taxonomy
 category: "document"
 # type
