Logo File Path Fix

--- a/content/zh/document/媒體宣傳資源.md
+++ b/content/zh/document/媒體宣傳資源.md
@@ -16,6 +16,6 @@ type: "document"
 
 ## Logo 原始檔下載連結
 
-- [純 Logo 圖檔黑白底色 AI 檔](material/LOGO_final.ai)
-- [長條協會名稱文字Logo PS 檔](material/Logo_long.psb)
-- [正方協會名稱文字Logo PS 檔](material/Logo_square.psb)
+- [純 Logo 圖檔黑白底色 AI 檔](/materiel/LOGO_final.ai)
+- [長條協會名稱文字Logo PS 檔](/materiel/Logo_long.psb)
+- [正方協會名稱文字Logo PS 檔](/materiel/Logo_square.psb)
