--- a/content/zh/document/什麼是尤塞氏症？.md
+++ b/content/zh/document/什麼是尤塞氏症？.md
@@ -1,11 +1,11 @@
 ---
-title: "什麼是尤塞氏症？"
+title: "什麼是尤塞氏症？尤塞氏症介紹"
 date: 2024-03-20T15:27:17+08:00
 draft: false
 # page title background image
 bg_image: "images/banner/banner.jpg"
 # meta description
-description : "尤塞氏症是一種罕見的遺傳性疾病，患者常常同時出現聽力障礙和視網膜色素病變，而且無法治療，只能及早發現，提前做好準備；根據統計，全球平均每10萬人約有2~4人罹患這種疾病。"
+description : "尤塞氏症是一種罕見的遺傳性疾病，患者常常同時出現聽力障礙和視網膜色素病變，而且無法治療，只能及早發現，提前做好準備。"
 # course thumbnail
 image: "images/documents/peace.jpg"
 # taxonomy
@@ -14,51 +14,73 @@ category: "document"
 type: "document"
 ---
 
-尤塞氏症（Usher Syndrome）是一種罕見的遺傳性疾病，目前估計全球共有 400,000 名左右的患者。
+## 尤塞氏症
+
+尤塞氏症（Usher Syndrome）是一種罕見的遺傳性疾病，
+
+* 全球估計有 400,000 名左右的患者
+* 美國估計有 40,000 名左右的患者
+* 歐洲估計有 37,000 名左右的患者
 
 主要特徵是先天性的聽力損失，以及影響眼睛的視網膜色素病變，此外，某些尤塞氏症患者可能還會有平衡問題。
 
-## 聽力損失 (Hearing Impairment)
+### 聽力損失 (Hearing Impairment)
 
-罹患尤塞氏症的個體，在出生時或於漸漸成長時，會有聽力損失的情形。主要為感音性聽力損失，大多數損失頻率偏向中高頻率。
+罹患尤塞氏症的個體，在出生時或於漸漸成長時，會有聽力損失的情形。主要為感音性聽力損失。 (Sensorineural Hearing Loss, SNHL)
 
-## 視網膜色素病變 (Retinitis Pigmentosa)
+### 視網膜色素病變 (Retinitis Pigmentosa)
 
-尤塞氏症會引起由視網膜色素病變造成的視力退化。受影響的視網膜逐漸退化，導致夜盲、視野狹窄。視野狹窄的特徵又被稱為隧道狀視野，用以形容僅剩中央局部視覺的狀況。視網膜色素病變不僅只有尤塞氏症會出現。
+尤塞氏症會引起由視網膜色素病變造成的視力退化。受影響的視網膜逐漸退化，導致夜盲、視野狹窄。視野狹窄的特徵又被稱為隧道狀視野，用以形容僅剩中央局部視覺的狀況。後期可能會出現畏光。視網膜色素病變不僅只有尤塞氏症會出現。
 
-## 平衡問題及其他
+### 平衡問題及其他
 
 有某些類型尤塞氏症患者，會有輕微至嚴重的平衡問題。另外也有病例有回報，有嗅味覺喪失的情況。
 
-尤塞氏症患者臨床傳統上，依據症狀嚴重程度、病程進展以分類。
-
-
 ## 尤塞氏症分型
 
-傳統上將尤塞氏症區分為 I 型、II 型和 III 型，主要根據聽力損失的嚴重程度、平衡問題的存在與否以及病程、症狀的發展快慢來區分。後續因為基因檢驗的技術發展，主要三型中有的可以再進一步分亞型，且 2022 年有新的研究文獻，根據基因再提出第四型。
+* 尤塞氏症傳統以臨床症狀來診斷，在發病年齡、症狀嚴重程度、病程進展有不同表現，並依此有簡易分型。
+* 如今因基因科技進展，基因檢驗可以用來確認判斷尤塞氏症分型以及亞型，
+* 目前已知有 3 大主要分型，以及 10 種亞型。
+* 以第一型, 第二型或第三型 (Type 1, 2, 3) 來描述區分不同症狀特徵的主要分型
+* 以英文字母後綴 (如 USH1B, USH2A...) 來分別代稱亞型及連結到各自致病突變基因。
 
-### 傳統分型
+| USH1                                                         | USH2                                              | USH3                           |
+| ------------------------------------------------------------ | ------------------------------------------------- | ------------------------------ |
+| USH1B (MYO7A)<br/>USH1C (USH1C)<br/>USH1D (CDH23)<br/>USH1F (PCDH15)<br/>USH1G (SANS) | USH2A (USH2A)<br/>USH2C (ADGRV1)<br/>USH2D (WHRN) | USH3A (CLRN1)<br/>USH3B (HARS) |
 
-大多數 I 型患者出生時就有嚴重的聽力損失。由視網膜色素病變引起的視力損失在童年就會很明顯。同時患者還會有內耳前庭系統的異常，因此患者會有平衡問題。罹患此病的孩童，開始獨立坐立和走路的時間可能比平常晚，同時在學習騎自行車和以及進行某些運動時有困難。
+如果罹患尤塞氏症，了解分型、亞型以及連結到的基因，可以：
+
+1. 更了解症狀進展以及將來可能會發生的情況
+2. 與您的醫生、親人、朋友、學校、工作場所討論您現在需要什麼，以及將來可能需要什麼
+3. 尋找並隨時了解可能對您有益的研究、研究、試驗和新療法
+
+#### 第一型
+
+大多數 I 型患者出生時就有嚴重的聽力損失。由視網膜色素病變引起的視力損失在童年就會很明顯，由周邊視野損失漸漸進展到中央。同時患者還會有內耳前庭系統的異常，因此會有平衡問題。罹患此病的孩童，開始獨立坐立和走路的時間可能比平常晚，同時在學習騎自行車和以及進行某些運動時有困難。
+
+#### 第二型
 
 II 型患者的特色是出生時就有聽力損失，且在青少年或成年時，開始出現進展性的視野損失。聽力損失的可能範圍從輕度到重度，主要影響中高頻率。與其他型不同，II 型並未與導致平衡問題的前庭異常相關。
+
+#### 第三型
 
 III 型的患者在生命的較稍後階段，才開始經歷聽力損失和視野的相關問題。與其他型不同，III 型通常出生時有正常的聽力。聽力損失通常在童年晚期或青少年期才開始，即語言發展之後，並隨著時間慢慢更嚴重。到中年時，大多數患者可能有重度聽力損失。由視網膜色素病變引起的視野損失，也在童年晚期或青少年期發展。有些 III 型的患者可能有導致平衡問題的前庭異常。
 
 ### 新發現的第四型
 
-在 2022 年，一篇研究發現，*ARSG* 基因的突變可能導致第四種類型的尤塞氏症（USH4），其有獨特的症狀模式。與尤塞氏症原先的 I-III 類型不同，視網膜色素病變主要位於視網膜的外部或周邊區域，導致隧道視覺，該研究指出的第四型尤塞氏症中的視網膜色素病變，主要位於視網膜的周邊中心和黃斑區域，並影響中心視覺。
+在 2022 年，一篇研究發現，*ARSG* 基因的突變可能導致非典型，獨立於第三型外的第四型尤塞氏症（USH4），其有獨特的症狀模式。與尤塞氏症原先的 I-III 類型不同，視網膜色素病變主要位於視網膜的外部或周邊區域，導致隧道視覺，該研究指出的非典型尤塞氏症中的視網膜色素病變，主要位於視網膜的周邊中心和黃斑區域，並影響中心視覺。由於案例很少，一些文獻、證據都還待研究釐清，甚至疾病本身的診斷方式、定義，可能都需要討論。後續還有 *CEP250*, *CEP78*, *ESPN* 等陸續回報。
 
-### 基於基因遺傳學的醫師觀點
+## 總結
 
 尤塞氏症的傳統分型，是依據症狀的表現來大略分類。然而在基因分子檢驗技術進步的現在，更多導致類似症狀的基因被發現，而不同基因，導致的症狀、疾病進展也會有差異。就算在同樣基因座，也可能因為不同突變形式，而有病程、嚴重度的細微分別。因此不用太拘泥於既定的疾病分類，尋求專業的醫療及遺傳諮詢，嘗試尋找潛在的突變基因，並討論未來的應對與照護計畫，方是正途。
 
-
-
 > *2023.7.19 黃俊榕醫師 撰寫*
+> 
+> *2023.8.11 更新*
 >
 > 參考資料：
 >
 > 1. [Usher syndrome type IV: clinically and molecularly confirmed by novel *ARSG* variants](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9556359/)
 > 2. [MedlinePlus - Usher Syndrome](https://medlineplus.gov/genetics/condition/usher-syndrome/)
 > 3. [Usher Syndrome Coalition](https://www.usher-syndrome.org/)
+> 4. 2024 USH Connection 資料
