--- a/content/zh/author/黃俊榕.md
+++ b/content/zh/author/黃俊榕.md
@@ -3,8 +3,8 @@ title: "黃俊榕"
 # page title background image
 bg_image: "images/backgrounds/page-title.jpg"
 # meta description
-description : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. dolore magna aliqua. Ut enim ad minim veniam, quis nostrud."
-email: "email2@example.org"
+description : ""
+email: "gbanyan.huang@gmail.com"
 # portrait
 image: ""
 social:
